      - 'k.trts' with number of studies evaluating a treatment
      - 'n.trts' with number of observations receiving a treatment
      - 'events.trts' with number of events observed for a treatment
      - 'n.matrix' with number of observations in direct comparisons
      - 'events.matrix' with number of events in direct comparisons
      - 'designs' with treatment designs
    - only print information on studies with missing treatment effect
      or standard error if argument 'warn' is TRUE

  * pairwise():
    - keep original order of studies
    - arguments 'event' and 'n' can be used for generic meta-analysis
      method based on arguments 'TE' and 'seTE'
    - argument 'n' can be used for meta-analysis with count outcomes
      (based on arguments 'event' and 'time')
    - infinite treatment estimates and standard errors set to NA
    - by default, do not print warnings if comparisons will not be
      included in network meta-analysis
    
  * netsplit():
    - new argument 'method' to choose approach to split direct and
      indirect evidence

  * forest.netmeta():
    - argument 'reference.group' can be a vector in order to include
      several / all network comparisons in a forest plot
    - (invisibly) returns a data frame with information used to
      produce the forest plot

  * forest.netsplit() and print.netsplit():
    - argument 'showall' replaced with 'show' (see help pages)

  * forest.netsplit():
    - show prediction intervals as colored bars
    - forest plot with layout 'subgroups by comparisons':
      omit treatment estimates in rows with prediction intervals if
      network estimates are also shown

  * netcomb() and discomb():
    - argument 'seq.components' replaced with 'seq.comps'

  * discomb():
    - arguments 'reference.group' and 'baseline.reference'

  * netposet():
    - allow for ties in rankings
    
 ** Bug fixes **

  * netsplit():
    - do not reorder a treatment comparison if reference treatment