@@ -42,6 +42,7 @@
       - 'n.matrix' with number of observations in direct comparisons
       - 'events.matrix' with number of events in direct comparisons
       - 'designs' with treatment designs
+    - correct entry for list element 'designs' for single design
     - only print information on studies with missing treatment effect
       or standard error if argument 'warn' is TRUE
 
